# cks

./: License.txt  ReadMe.txt
Data/: ReadMe.txt
Data/Intro/Aliases/: AddressBookEntry.cks  AddressBookEntry.tcks
Data/Intro/Lists/: Colors.cks  Colors.tcks  People.cks  People.tcks  Strings-1.cks  Strings-2.cks  (+1 more)
Data/Real/: ReadMe.txt
Data/Test/: ReadMe.txt  test.txt
Design/: BinaryFormat.txt  DefaultValues.txt  LazyLoading.txt  MigrationLanguage.txt  Query.txt  Relational.txt  StaticVerifiability.txt  Streaming.txt  StringEncoding.txt  StrongerTyping.txt  TypeVersioning.txt
Implementation/: ReadMe.txt
Implementation/C#/: Either.cs  ReadMe.txt  build  build.cmd  clean
Implementation/Haskell/: .gitignore  License.txt  Makefile  ReadMe.txt  cks-runtime.cabal
Implementation/Haskell/Source/Data/Cks/: BinaryReader.hs  BinaryWriter.hs  MaybeE.hs  TextModel.hs  TextParser.hs  TextReader.hs  TextWriter.hs  TreeDoc.hs
Implementation/Java/: Config.mk  Makefile  Packages.txt  ReadMe.txt  cks  pack-workbench  repackage  workbench  workbench.html  workbench.proguard
Implementation/Test/: Config.mk  Makefile  ReadMe.txt  cks-test  run
Website/: Rakefile  ReadMe.txt  config.yaml
Website/examples/: students-advanced.cks  students-advanced.tcks  students.cks  students.tcks
Website/ext/: init.rb
Website/src/: contact.page  datamodel.page  default.template  downloads.page  example-csharp.page  example-haskell.page  example-java.page  index.page  index.template  overview.page  reference.page  screen.css  variants.page  workbench.page
Website/support/: colorize.py
(+185 files in other folders)
